[package]
name = "neutraltemplate"
version = "1.4.1"
edition = "2021"

[lib]
name = "neutraltemplate"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = [] }
neutralts = "1.4.1"
serde_json = "1.0"
rmp-serde = "1.3.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# strip = true
# panic = "abort"
